# research_master_paper

./: .gitignore  Makefile  README.md  pyproject.toml
data/01_raw/Currencies/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
data/01_raw/Futures/: Фьючерс на нефть Brent (1).csv.csv
data/01_raw/Kase/: ė­®ē­ė„ ę„­ė ­  01_02_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_03_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_04_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_06_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_07_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_08_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_09_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_11_2022.xlsx  ė­®ē­ė„ ę„­ė ­  01_12_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_02_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_03_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_06_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_08_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_09_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_11_2022.xlsx  ė­®ē­ė„ ę„­ė ­  02_12_2022.xlsx  ė­®ē­ė„ ę„­ė ­  03_02_2022.xlsx  ė­®ē­ė„ ę„­ė ­  03_03_2022.xlsx  ė­®ē­ė„ ę„­ė ­  03_05_2022.xlsx  (+309 more)
data/02_intermediate/: currencies.csv  oil_price.csv
data/04_feature/: lightgbm_baseline_dataset_score_table.csv  lightgbm_importance_table.csv  lightgbm_lag_aggs_dataset_score_table.csv  lightgbm_params_on_lag_aggs.csv
notebooks/: 01_data_preparation.ipynb  01_preparation_of_data.ipynb
notebooks/.ipynb_checkpoints/: 01_data_preparation-checkpoint.ipynb  02_clustering_sctm-checkpoint.ipynb  03_linkage-checkpoint.ipynb  04_grid_search-checkpoint.ipynb  05_results_rendering-checkpoint.ipynb
